--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": " nodemon index.js"
+   
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "gitignore": "^0.7.0"
+   
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
