--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": " node index.js"
+    "start": " node index.js",
+    "heroku-postbuild": "cd krystle-app/build && npm i && npm run build "
   },
   "keywords": [],
   "author": "",
