--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": " node index.js",
+    "start": " nodemon index.js",
     "heroku-postbuild": "cd krystle-app/build && npm i && npm run build "
   },
   "keywords": [],
