--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "heroku-postbuild": "cd ./krystle-app/build && npm i && npm run build "
+    "heroku-postbuild": "cd client && npm i && npm run build "
   },
   "keywords": [],
   "author": "",
