--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "gitignore": "^0.7.0"
-   
-  },
-  "devDependencies": {
+    "gitignore": "^0.7.0",
     "nodemon": "^2.0.16"
+
   }
 }
