--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "gitignore": "^0.7.0",
+    "node": "^17.7.2",
     "nodemon": "^2.0.16"
-
   }
 }
